--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@google/generative-ai": "^0.15.0",
     "@headlessui/react": "^2.2.7",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -18,8 +20,8 @@
     "@tanstack/react-query": "^5.51.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "@ffmpeg/ffmpeg": "^0.12.7",
     "framer-motion": "^11.10.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "next": "15.0.3",
     "next-themes": "^0.2.1",
@@ -31,6 +33,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.2",
