--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@ffmpeg/ffmpeg": "^0.12.7",
     "@google/generative-ai": "^0.15.0",
     "@headlessui/react": "^2.2.7",
